--- a/intro/introduction.tex
+++ b/intro/introduction.tex
@@ -16,12 +16,13 @@ Using only standard assumptions like RSA, Chase and Lysyanskaya proposed a ring 
 %\footnote{This works seems to has gone unnoticed in the ring signature literature. In fact, to the best of our knowledge, the only recent work citing it is \cite{AC:MalSch17}.} 
 Their ring signature is built on top of
 signatures of knowledge and accumulators, following Dodis et al.~\cite{EC:DKNS04}. The scheme description is only sketched and no proof of security is given but, for fairness (as also noted in \cite{AC:MalSch17}), their work is previous to the (now standard) formal definition of ring signatures of Bender et al.~\cite{TCC:BenKatMor06}. Their scheme goes as follows.
-Given a ring of RSA public keys $R = \{(N,y_1),...,(N,y_n)\}\subseteq \Z_{\phi(N)}$, one can compute an accumulated value $a = g^{\prod_{i=1}^n y_i}$ and a witness $w_i = a^{-y_i} \mod N$ that $y_i$ is accumulated in $a$, which can be verified checking if $a = w_i^{y_i} \mod N$. A ring signature on a message $m$ is computed as a signature on $m$ of knowledge of $x_i,y_i\in \Z_{\phi(N)}, w_i\in \Z_N$ such that: a) $x_iy_i = 1 \mod \phi(N)$ and b)  $a = w_i^{y_i} \mod N$. However, signatures of knowledge are built on top of simulation sound NIZK which in turn is built from standard NIZK, and the only NIZK proof system for a) and b) seems to be generic NIZK for circuit satisfiability. For example, using Groth-Sahai proofs the proof will require $O(|C|)$ elements of a bilinear group, where $|C|$ is the size of the circuit for computing a) $\wedge$ b). One might expect the circuit for a) and b) to have at least $\approx 10^4$ gates\footnote{For example, in \url{https://www.cs.bris.ac.uk/Research/CryptographySecurity/MPC/}, a circuit for multiplying 32x32-bit integers requires $\approx 10^4$ gates. Our estimation is quite conservative since RSA integers should be of size $\geq 1024$, and further, one might expect a circuit for a) and b) to contain at least thousands of multiplication gates.}, and thus the proof will be of size greater than $10^4$ elements of a bilinear group. %We would like to note that the NIZK proof used in this construction is \emph{non-blackbox}, that is, it requires a bit-by-bit representation of elements and group operations of $\Z_{\phi(N)}$ and $\Z_N$. We believe this 
+Given a ring of RSA public keys $R = \{(N,y_1),...,(N,y_n)\}\subseteq \Z_{\phi(N)}$, one can compute an accumulated value $a = g^{\prod_{i=1}^n y_i}$ and a witness $w_i = a^{-y_i} \mod N$ that $y_i$ is accumulated in $a$, which can be verified checking if $a = w_i^{y_i} \mod N$. A ring signature on a message $m$ is computed as a signature on $m$ of knowledge of $x_i,y_i\in \Z_{\phi(N)}, w_i\in \Z_N$ such that: a) $x_iy_i = 1 \mod \phi(N)$ and b)  $a = w_i^{y_i} \mod N$. However, signatures of knowledge are built on top of simulation sound NIZK which in turn is built from standard NIZK, and the only NIZK proof system for a) and b) we are aware of seems to be generic NIZK for circuit satisfiability.
+Using Groth-Sahai proofs the proof will require $O(|C|)$ elements of a bilinear group, where $|C|$ is the size of the circuit for computing a) $\wedge$ b). One might expect the circuit for a) and b) to have at least $\approx 10^4$ gates\footnote{For example, in \url{https://www.cs.bris.ac.uk/Research/CryptographySecurity/MPC/}, a circuit for multiplying 32x32-bit integers requires $\approx 10^4$ gates. Our estimation is quite conservative since RSA integers should be of size $\geq 1024$, and further, one might expect a circuit for a) and b) to contain at least thousands of multiplication gates.}, and thus the proof will be of size greater than $10^4$ elements of a bilinear group. %We would like to note that the NIZK proof used in this construction is \emph{non-blackbox}, that is, it requires a bit-by-bit representation of elements and group operations of $\Z_{\phi(N)}$ and $\Z_N$. We believe this 
 
 Despite Chase and Lysyanskaya's construction, without random oracles or non-falsifiable assumptions all constructions have signatures of size linear in the size of the ring, being the sole exception the $\Theta(\sqrt{n})$ ring signature of Chandran et al.~\cite{ICALP:ChaGroSah07}. They construct a simple and elegant ring signature which at its core implements a \emph{set-membership proof}, i.e.~a proof that some committed public key belongs to the set of public keys of the ring users. Their set-membership proof is quite strong, in the sense that the verification keys may be even chosen by the adversary. Going a step forward, we will build a more efficient but weaker set-membership proof which is still useful for building ring signatures.
 
 We note that no improvements in the
-signature size have been made within a decade. In fact, although two previous works claim to construct signatures of constant \cite{ACISP:BosDasRan15} or logarithmic \cite{IET:GriSusPla16} size, in Appendix \ref{sec:rs-flawed} we show that one construction fails to give a correct proof of security and the other is in fact of size $\Theta(n)$. The only (non-asymptotic) improvements we are aware of are \cite{TCC:Rafols15,AC:GonHevRaf15}.
+signature size have been made within a decade. In fact, although two previous works claim to construct signatures of constant \cite{ACISP:BosDasRan15} or logarithmic \cite{IET:GriSusPla16} size, in Section \ref{sec:rs-flawed} we show that one construction fails to give a correct proof of security and the other is in fact of size $\Theta(n)$. The only (non-asymptotic) improvements we are aware of are \cite{TCC:Rafols15,AC:GonHevRaf15}.
 
 \subsection{Our contribution}
 In this work we present the first ring signature based on bilinear groups whose signature size is asymptotically smaller than Chandran et al.'s, and whose security is proven under falsifiable assumptions and without random oracles. Our ring signature consists of $\Theta(\sqrt[3]{n})$ group elements, computing a signature requires $\Theta(\sqrt[3]{n})$ exponentiations, and verifying a signature requires $\Theta(n^{2/3})$ pairings. Our ring signature is perfectly anonymous, i.e.~it completely hides the identity of the actual signer, and is computationally infeasible to forge signatures for non-members of the ring. A comparison of our ring signature and Chandran et al.'s is given in Table \ref{table:eff} which summarizes a more detailed analysis found in Appendix \ref{sec:eff-analysis}.
@@ -32,7 +33,7 @@ The security of our construction relies on a security assumption --- the {permut
  
 \input{intro/table-eff}
 
-We require members of the ring to erase the random coins after generating the public/secret key pair. The reason is that the public keys contain group elements whose discrete logs are of the form $(a,a^2)$. Although this helps to embed an instance of the permutation pairing assumption in the set of (honest) public keys, it prevents oblivious sampling of the verification keys. Thereby, users must generate information that, when corrupted by the adversary, is incompatible with the permutation pairing assumption. We remark that this only affects unforgeability and honestly generated signatures still don't reveal any information about the signer.
+We require members of the ring to erase the random coins after generating the public/secret key pair. The reason is that the public keys contain group elements whose discrete logs are of the form $(a,a^2)$. Although this helps to embed an instance of the permutation pairing assumption in the set of (honest) public keys, it prevents oblivious sampling of the verification keys. Thereby, users must generate information that, when corrupted by the adversary, is incompatible with the permutation pairing assumption. We remark that this only affects unforgeability and honestly generated signatures still don't reveal any information about the signer. We elaborate more on this point in Section \ref{sect:erasures}.
 
 Nevertheless, even if we can't guarantee that some of this values are revealed to the adversary, it is unlikely that this will render easy the forgery. We uphold this on the fact that our scheme is secure, without erasures, under a stronger assumption, the \emph{interactive} permutation pairing assumption, which we prove secure in generic bilinear groups.
 %
