--- a/intro/table-eff.tex
+++ b/intro/table-eff.tex
@@ -18,7 +18,7 @@
 \end{tabular}
 %\end{scriptsize}
 \end{center}
-\caption{Comparison of Chandran et al.'s ring signature and ours for a ring of size $n$. `Signature generation time' is measured in number of exponentiations, `Verification time' is measured in number of pairings, and all other rows are measured in number of group elements.\label{table:eff}}
+\caption{Comparison of Chandran et al.'s ring signature and ours for a ring of size $n$. `Signature generation time' is measured in number of exponentiations, `Verification time' is measured in number of pairings, and all other rows are measured in number of group elements. A quick calculation shows that our signature outperforms Chandran et al.'s (roughly) for $n>180$.\label{table:eff}}
 \end{minipage}
 \end{center}
 \end{table}
