--- a/our-construction/construction.tex
+++ b/our-construction/construction.tex
@@ -35,7 +35,7 @@ Compute GS commitments to all but the first element of $[\vecb{\kappa}']_2$ (not
 \item[$\mathsf{Verify}_{\rho,R}(m,\grkb{\sigma})$:] Verify the validity of the one-time signature and of all the proofs. Return 0 if any of these checks fails and 1 otherwise.
 \end{description}
 
-In Appendix \ref{sec:sec-proof} we prove the following theorem which states the security of our construction.
+We prove the following theorem which states the security of our construction.
 
 \begin{theorem}\label{theo:security}
 The scheme presented in this section is a ring signature scheme
