--- a/prelim/assumptions.tex
+++ b/prelim/assumptions.tex
@@ -11,8 +11,7 @@ We say that the $(\ell,m)$-permutation pairing assumption holds relative to $\G_
 \begin{array}{l}
 	gk\gets\G_a(1^\lambda);\matr{A}\gets\mathcal{Q}_{m};\\
 	(i_1,\mathsf{st}_1) \gets \advA(gk,[\matr{A}]_1,[\matr{A}]_2),
-	(i_2,\mathsf{st}_2) \gets \advA(\vecb{a}_{i_1},\mathsf{st}_2),
-	\ldots,
+	(i_2,\mathsf{st}_2) \gets \advA(\vecb{a}_{i_1},\mathsf{st}_2),\ldots,\\
 	(i_{m-\ell},\mathsf{st}_{m-\ell}) \gets \advA(\vecb{a}_{i_{m-\ell-1}},\mathsf{st}_{m-\ell-1})\\
 	%\begin{array}{c}\vdots\end{array}\\
 	%\\
