--- a/prelim/prelim.tex
+++ b/prelim/prelim.tex
@@ -10,4 +10,4 @@ Elements in $\GG_s$ are denoted implicitly as $[a]_s:=a \Pt_s$, where $a\in\Z_q$
 The pairing operation is written as a product $\cdot$, that is $[a]_1 \cdot [b]_2 = [a]_1 [b]_2= [b]_2[a]_1=e([a]_1,[b]_2)=[ab]_T$. Vectors and matrices are denoted in boldface. Given a matrix $\matr{T}=(t_{i,j})$, $[\matr{T}]_s$ is
 the natural embedding of $\matr{T}$ in $\GG_s$, that is, the matrix whose $(i,j)$th entry is $t_{i,j}\mathcal{P}_s$. Given a matrix $\matr{S}$ with the same number of rows as $\matr{T}$, we define $\matr{S}\cat\matr{T}$ as the concatenation of $\matr{S}$ and $\matr{T}$.
 
-For lack of space, we defer the description of Groth-Sahai proofs and of Boneh-Boyen signatures to Appendix \ref{sec:gs-proofs} and Appendix \ref{sec:bbs}.
+%For lack of space, we defer the description of Groth-Sahai proofs and of Boneh-Boyen signatures to Appendix \ref{sec:gs-proofs} and Appendix \ref{sec:bbs}.
