--- a/appendix/security-proof.tex
+++ b/appendix/security-proof.tex
@@ -1,18 +1,18 @@
 % !TEX root = ../main-ring-signature.tex
 
-We restate Theorem \ref{theo:security} and prove it.
-\begin{theorem}
-The scheme presented in Section \ref{sec:our-construction} is a ring signature scheme
-with perfect correctness, perfect anonymity and computational unforgeability under the
-$q_\mathsf{gen}$-permutation pairing assumption, the $\mathcal{Q}_{q_\mathsf{gen}}^\top\mbox{-}\skermdh$ assumption, the $\mathrm{SXDH}$ assumption, and the assumption
-that the one-time signature and the Boneh-Boyen signature are unforgeable.
-Concretely, for any PPT adversary $\advA$ against the unforgeability of the scheme, there exist adversaries $\advB_1,\advB_2,\advB_3,\advB_4,\advB_5$ such that
-\begin{align*}
-\adv(\advA)\leq &\adv_{\mathrm{SXDH}}(\advB_1)+\adv_{q_\mathsf{gen}\mbox{-}\mathrm{PPA}}(\advB_2)+\adv_{\mathcal{Q}^\top_{q_\mathsf{gen}}\mbox{-}\skermdh}(\advB_3)+\\
-&q_\mathsf{gen}(q_\mathsf{sig}\adv_{\mathsf{OT}}(\advB_4)+\adv_{\mathsf{BB}}(\advB_5)),
-\end{align*}
-where $q_\mathsf{gen}$ and $q_\mathsf{sign}$ are, respectively, upper bounds for the number of queries that $\advA$ makes to its $\mathsf{VKGen}$ and $\mathsf{Sign}$ oracles.
-\end{theorem}
+%We restate Theorem \ref{theo:security} and prove it.
+%\begin{theorem}
+%The scheme presented in Section \ref{sec:our-construction} is a ring signature scheme
+%with perfect correctness, perfect anonymity and computational unforgeability under the
+%$q_\mathsf{gen}$-permutation pairing assumption, the $\mathcal{Q}_{q_\mathsf{gen}}^\top\mbox{-}\skermdh$ assumption, the $\mathrm{SXDH}$ assumption, and the assumption
+%that the one-time signature and the Boneh-Boyen signature are unforgeable.
+%Concretely, for any PPT adversary $\advA$ against the unforgeability of the scheme, there exist adversaries $\advB_1,\advB_2,\advB_3,\advB_4,\advB_5$ such that
+%\begin{align*}
+%\adv(\advA)\leq &\adv_{\mathrm{SXDH}}(\advB_1)+\adv_{q_\mathsf{gen}\mbox{-}\mathrm{PPA}}(\advB_2)+\adv_{\mathcal{Q}^\top_{q_\mathsf{gen}}\mbox{-}\skermdh}(\advB_3)+\\
+%&q_\mathsf{gen}(q_\mathsf{sig}\adv_{\mathsf{OT}}(\advB_4)+\adv_{\mathsf{BB}}(\advB_5)),
+%\end{align*}
+%where $q_\mathsf{gen}$ and $q_\mathsf{sign}$ are, respectively, upper bounds for the number of queries that $\advA$ makes to its $\mathsf{VKGen}$ and $\mathsf{Sign}$ oracles.
+%\end{theorem}
 
 \begin{proof}
 Perfect correctness follows directly from the definitions. Perfect anonymity follows from the fact that the perfectly hiding Groth-Sahai CRS defines perfectly hiding commitments and perfect witness-indistinguishable proofs, information theoretically hiding any information about $\vecb{vk}$.
@@ -37,7 +37,7 @@ Since in $\sfGame_1$ variables $\err_2$ and $\err_3$ are just dummy variables, t
 \begin{lemma} There exist adversaries $\advB_2$ and $\advB_3$ against the ${q_\mathsf{gen}}$-permutation pairing assumption and against the $\mathcal{Q}^\top_{{q_\mathsf{gen}}}\mbox{-}\kermdh$ assumption, respectively, such that
 $$
 |\Pr[\sfGame_2=1]-\Pr[\sfGame_1=1]|\leq \adv_{{q_\mathsf{gen}}\mbox{-}\mathrm{PPA}}(\advB_2)+\adv_{\mathcal{Q}^\top_{{q_\mathsf{gen}}}\mbox{-}\skermdh}(\advB_3).
-$$
+$$\label{lemma:fin}
 \end{lemma}
 \begin{proof}
 Note that
@@ -141,3 +141,8 @@ $$
 \adv_{\mathsf{BB}}(\advB_5)\geq \Pr[\sfGame_3=1|\neg E]$$
 \end{proof}
 \end{proof}
+
+\subsection{Getting rid off the CRS}
+Malavolta et al. showed how to get rid of the CRS distributing it among the users public keys \cite{AC:MalSch17}. To eliminate the CRS, which is a pair of Groth-Sahai commitment keys, each party appends its own Groth-Sahai commitment keys to its public key. The signer and the verifier combines all the commitment keys by simply adding them and, as long as at least one verification key was honestly generated, the combined commitment keys are correctly distributed. We can easily apply this approach to our construction. That is, each participant's verification is appended with $[\vecb{u}_{i,1}]_1,[\vecb{u}_{i,2}],[\vecb{v}_{i,1}]_2,[\vecb{v}_{i,2}]$, perfectly hiding Groth-Sahai commitments keys, and the Groth-Sahai proofs are computed using the following commitment keys: $[\vecb{u}_{i,j}]_1 :=\sum_{i=1}^n [\vecb{u}_{i,j}]_1,[\vecb{v}_{i,j}]_2 :=\sum_{i=1}^n [\vecb{v}_{i,j}]_2$, for $j=1,2$ and the ring of verification keys is $\{\vecb{vk}_1,\ldots,\vecb{vk}_n\}$.
+
+Nevertheless, as noted on Section \ref{sect:erasures}, this approach requires erasures. Indeed, when proving unforgeability one needs to move from perfectly hiding commitment keys to perfectly binding commitment keys. This implies that the reduction must change itself the verification keys of all the users to perfectly binding ones (as done by adversary $\advA_h$ on Lemma \ref{lemma:fin}). In the perfectly hiding setting commitment keys are chosen as $\vecb{u}_1 = \lambda\vecb{u}_2$ and $\vecb{u}_2 = (a,1)^\top$, for a random $\lambda$ and random $a$.  On the other hand, perfectly binding commitments keys have the only difference that $\vecb{u}_1 = (1,0)^\top+\lambda\vecb{u}_2$. An adversary that dynamically corrupts parties will eventually gets access to $\lambda$ and $a$, which clearly allows him to detect any change on the commitment keys. Hence, also this values must be erased after the verification key is computed.
