--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -102,6 +102,10 @@
 
     \section{Our Construction} \label{sec:oc}
 
+	\subsection{Our hash functions from the SXDH assumption}
+
+		\input{our-construction/our-hashes-sxdh}
+
 	\subsection{Our hash functions}
 
 		\input{our-construction/our-hashes}
