--- a/our-construction/our-hashes-sxdh.tex
+++ b/our-construction/our-hashes-sxdh.tex
@@ -1,14 +1,19 @@
 % !TEX root = ../main-ring-signature.tex
 
-We instantiate definition \ref{def:hash1} with the function $g$ and \ref{def:hash2}  with $h$ defined as follows. For  $h$, $\mathcal{M}=\mathcal{Q}_m$, $\mathcal{Y}=[m]$, $\KGen$ returns the description of an asymmetric group plus ElGamal encryption keys $[\vecb{u}]_1$  and $[\vecb{v}]_2$ together with the decryption keys, respectively, $\vecb{k},\vecb{k}'$ 
+We instantiate definitions \ref{def:hash1} and \ref{def:hash2}  with, respectively, the functions $g$ and $h$ as defined as follows.
+
+\paragraph{The function $h$.} Consider $\mathcal{M}=\mathcal{Q}_m$, $\mathcal{Y}=[m]$, $\KGen$ returns the description of an asymmetric group plus ElGamal encryption keys $[\vecb{u}]_1$  and $[\vecb{v}]_2$ together with the decryption keys, respectively, $\vecb{k},\vecb{k}'$, and
 \begin{align*}
 &h([\matr{A}]_1,[\matr{B}]_2):= \sum_{i=1}^m[\vecb{a}_i]_1,\\
-&\mathcal{Q}_m := \left\{
+&\mathcal{Q}_m^\vecb{b} := \left\{
 \begin{array}{c}
 ([\matr{A}]_1,[\matr{B}]_2) \in \GG_1^{2\times m}\times\GG_2^{2\times m}:
 \exists \vecb{b} \in\bits^m,\vecb{r},\vecb{s}\in\Z_q^m\text{ s.t. }\\
-{\matr{A} = \pmatri{0\\\vecb{b}^\top}+\vecb{u}\vecb{r}^\top, \matr{B} = \pmatri{0\\\vecb{b}^\top}+\vecb{v}\vecb{s}^\top},
-\end{array}\right\}.\\
+{\matr{A} = \pmatri{0\\\vecb{b}^\top}+\vecb{u}\vecb{r}^\top,
+\matr{B} = \pmatri{0\\\vecb{b}^\top}+\vecb{v}\vecb{s}^\top},
+\text{ and }\sum_{i=0}^m b_i = w
+\end{array}\right\},\\
+&\mathcal{Q}_m = \cup_{\vecb{b}\in\bits^m} \mathcal{Q}_m^\vecb{b}.
 \end{align*}
 Note that, if $A=(\vecb{a}_1\cat\cdots\cat\vecb{a}_m),\matr{B}=(\vecb{b}_1\cat\ldots\cat\vecb{b}_m)$, then $[\vecb{a}_i]$ and $[\vecb{b}_i]$ are, respectively, ElGamal encryptions $\Enc_{[\vecb{u}]_1}(b_i;r_i)$ and $\Enc_{[\vecb{v}]_2}(b_i;s_i)$.
 
@@ -17,13 +22,13 @@ from  $[\vecb{b}]_2$ without knowledge of its discrete logarithm. For simplicity
 
 %Although is hard to compute $h$, is easy to show that $h(A)=h(A')$ whenever elements of $A'$ are re-randomizations of the elements of $A$. That is, for each $\vecb{a}'\in A'$ there exists a unique  $\vecb{a}\in A$ and $\delta\in\Z_q$ such that $\vecb{a}' = \vecb{a}+\delta\vecb{u}$. Given all the random coins used for rerandomization, the statement $h(A)=h(A')$ can be proved using Groth-Sahai.
 
-Note that the function $h$ outputs an encryption of the hamming weight of $b_1,\ldots,b_m$. Although is possible to find collisions, two matrices are a collision if they encrypt bitstrings with the same hamming weight or equivalently, the decryptions are equal up to a permutation. Consequently, to restore collision resistance, we weaken the equality relation to the following equivalence relation
+Note that the function $h$ outputs an encryption of the hamming weight of $\vecb{b}$. Although is possible to find collisions, two matrices form a collision if they encrypt bitstrings with the same hamming weight or equivalently, the decryptions are equal up to a permutation. Consequently, to restore collision resistance, we weaken the equality relation to the following equivalence relation
 $$
 \matr{A}' \equiv_\vecb{u} \matr{A} \iff \exists \matr{P}\in\mathcal{S}_m, \vecb{\delta}\in\Z_q^m \text{ s.t. } \matr{A}' = \matr{A}\matr{P} + \vecb{u}\vecb{\delta}^\top,
 $$
-where $\mathcal{S}_m\subset \bits^{m\times m}$ is the set of permutation matrices of size $m\times m$.
+where $\mathcal{S}_m\subset \bits^{m\times m}$ is the set of permutation matrices of size $m$.
 
-Indeed, let $\matr{A}=\smallpmatrix{0\\\vecb{b}^\top}+\vecb{u}\vecb{r}^\top,\matr{A}'=\smallpmatrix{0\\{\vecb{b}'}^\top}+\vecb{u}\vecb{\delta}^\top$ such that $h([\matr{A}]_1)=h([\matr{A}']_1)$. Since $\vecb{b}$ and $\vecb{b}'$ have the same hamming weigh, then there exists a permutation matrix $\matr{P}$ such that $\vecb{b}^\top\matr{P} = {\vecb{b}'}^\top$ and hence
+Indeed, let $\matr{A}=\smallpmatrix{0\\\vecb{b}^\top}+\vecb{u}\vecb{r}^\top,\matr{A}'=\smallpmatrix{0\\{\vecb{b}'}^\top}+\vecb{u}\vecb{\delta}^\top$ such that $h([\matr{A}]_1)=h([\matr{A}']_1)$. Since $\vecb{b}$ and $\vecb{b}'$ have the same hamming weigh there exists a permutation matrix $\matr{P}$ such that $\vecb{b}^\top\matr{P} = {\vecb{b}'}^\top$ and hence
 \begin{align*}
 \matr{A}' &= \pmatri{0\\\vecb{b}^\top\matr{P}} + \vecb{u}\vecb{\delta} + \vecb{u}\vecb{r}^\top\matr{P} - \vecb{u}\vecb{r}^\top\matr{P}\\
 &=
@@ -33,17 +38,17 @@ Indeed, let $\matr{A}=\smallpmatrix{0\\\vecb{b}^\top}+\vecb{u}\vecb{r}^\top,\mat
 \end{align*}
 %Given a second preimage $h$, it is trivial to construct an adversary breaking the $m$-PPA assumption. Indeed, Let $[\matr{A}]_1,[\matr{A}]_2$ the challenge of the $m$-PPA assumption and let $A$ the set of columns of $[\matr{A}]_1$ and $[\matr{A}]_2$, which is clearly uniformly distributed in $Q_m$. Then given any $A'\in Q_m$ such that $A'\neq A$ and $h(A)=h(A')$, it holds that $[\matr{A}']_1$, the matrix whose columns are the first components of the elements of $A'$, is not a permutation of $[\matr{A}]_1$ and hence breaks $m$-PPA assumption. Then for any adversary $\advA$ there is an adversary $\advB$ such that $\adv^{\mathsf{aPre}_g}(\advA)=\adv_{m\mbox{-}\mathsf{PPA}}(\advB)$. 
 
-In the case of $g$, $\mathcal{M}=\GG^m_2$, $\mathcal{Y}=\GG_2^2$, and $\KGen$ picks a group description $gk\gets\ggen_a(1^\lambda)$ together with $[\matr{A}]_1$ such that
-$$
-\matr{A}  = \pmatri{0 & \cdots & 0\\ b_1 & \cdots & b_m} +\vecb{u}\vecb{r}^\top \in\Z^{2\times m}_q,
-$$
- where $\vecb{r}\gets\Z_q^m$ and $b_1,\ldots,b_m\in\bits$. The function is defined as
+\paragraph{The function $g$.} Consider $\mathcal{M}=\GG^m_2$, $\mathcal{Y}=\GG_2^2$, and $\KGen$ receives a bitstring $\vecb{b}\in\bits^m$ together with a and picks a group key $gk$ and outputs $[\matr{A}]_1,[\matr{B}]_2\gets\mathcal{Q}_m^\vecb{b}$. The function is defined as
 $$
 g_{[\matr{A}]_1}([\vecb{x}]_2):= \vecb{k}^\top\matr{A}\vecb{x}=(\matr{B}\vecb{x})^\top\vecb{k}=\sum_{i=1}^m b_ix_i.
 $$
 Although not efficiently computable, one can prove that 
  $g_{[\matr{A}]_1}([\vecb{x}]_2) = g_{[\matr{A}]_1}([\vecb{x}']_2)$
- using the homomorphic properties of Groth-Sahai proofs. If we additionally provide proofs that $b_ix_i=x_ib'_i$, where $b_i'$ is the decryption of $\vecb{b}_i$, from which it migth be computed a proof that $g_\matr{A}(\vecb{x})=\sum_{i=1}^m b_ix_i$.
+ using the homomorphic properties of
+ Groth-Sahai proofs. If we additionally provide proofs that $b_ix_i=x_ib'_i$, where $b_i'$ is the decryption of $\vecb{b}_i$, from which it migth be computed a proof that
+$$
+[g_\matr{A}(\vecb{x})]_1-g=\sum_{i=1}^m b_ix_i.
+$$
 
 Note that in asymmetric groups the order of multiplicads in te expressions $b_ix_i$ and $x_ib'_i$ is relevant since it imply that commitments (or encryption) to $b_i$ and $b'_i$ live, respectively, in $\GG_1$ and $\GG_2$. The Groth-Sahai proof that two commitments in different groups open to the same value is obtained equivalently as a proofs $[\vecb{\pi}_i]_1,[\vecb{\theta}_i]_2$ such that
 $$ 
